fix(recipe): add costPercentage info
