# docs/swagger.json
@@ -658,7 +658,7 @@
                     "type": "number"
                 },
                 "unit": {
-                    "type": "string"
+                    "$ref": "#/definitions/github_com_hifat_mallow-sale-api_internal_usageUnit.Prototype"
                 }
             }
         },
@@ -684,10 +684,14 @@
         "github_com_hifat_mallow-sale-api_internal_recipe.Request": {
             "type": "object",
             "required": [
+                "costPercentage",
                 "ingredients",
                 "name"
             ],
             "properties": {
+                "costPercentage": {
+                    "type": "number"
+                },
                 "ingredients": {
                     "type": "array",
                     "items": {
@@ -702,6 +706,9 @@
         "github_com_hifat_mallow-sale-api_internal_recipe.Response": {
             "type": "object",
             "properties": {
+                "costPercentage": {
+                    "type": "number"
+                },
                 "createdAt": {
                     "type": "string"
                 },
