# internal/recipe/entity.go
@@ -18,7 +18,8 @@ type IngredientEntity struct {
 type Entity struct {
 	utilsModule.Base `bson:"inline"`
 
-	ID          primitive.ObjectID `bson:"_id,omitempty" json:"id"`
-	Name        string             `bson:"name" json:"name"`
-	Ingredients []IngredientEntity `bson:"ingredients" json:"ingredients"`
+	ID             primitive.ObjectID `bson:"_id,omitempty" json:"id"`
+	Name           string             `bson:"name" json:"name"`
+	CostPercentage float32            `bson:"cost_percentage" json:"costPercentage"`
+	Ingredients    []IngredientEntity `bson:"ingredients" json:"ingredients"`
 }
